2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_alloc_): Update to folio_object_alloc's
	interface change.
	(storage_free_): Likewise.

2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* storage.h (storage_alloc): Rename from this...
	(storage_alloc_): ... to this.
	(storage_free): Rename from this...
	(storage_free_): ... to this.
	(storage_alloc): New macro.
	(storage_free): New macro.
	* storage.c (storage_alloc): Rename from this...
	(storage_alloc_): ... to this.
	(storage_free): Rename from this...
	(storage_free_): ... to this.

2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_page_cleanup): Remove debugging cruft.
	
2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_frame_alloc): When allocating the first
	frame, set EXCEPTION_PAGE->EXCEPTION_STACK_BOTTOM.
	(exception_page_cleanup): New function.

	* ia32-exception-entry.S (_exception_handler_end): Correctly
	adjust the exception page's exception stack.

2007-12-12  Neal H. Walfield  <neal@gnu.org>

	* mmap.c (munmap): Free the virtual addresses.

2007-12-12  Neal H. Walfield  <neal@gnu.org>

	* storage.c (ss_lock_trace) [! NDEBUG]: New definition.
	(ss_lock_trace_count) [! NDEBUG]: Likewise.

2007-12-12  Neal H. Walfield  <neal@gnu.org>

	* mmap.c (munmap): Implement.
	* pager.h (pager_destroy_t): New type.
	(struct pager): New field, destory.
	(pagers): New declaration.
	* pager.c (pagers): Remove static qualifier.
	* anonymous.c (destroy): New function.
	(anonymous_pager_alloc): Set ANON->PAGER.DESTROY to it.
	(anonymous_pager_destroy): Call destroy to do the bulk of the
	work.

2007-12-10  Neal H. Walfield  <neal@gnu.org>

	* as.c: Don't include <pthread.h>.  Include <hurd/mutex.h>.
	(free_spaces_lock): Make an ss_mutex_t, not a pthread_mutex_t.
	Update users.
	* storage.c: Don't include <pthread.h>.  Include <hurd/mutex.h>.
	(struct storage_desc): Make lock an ss_mutex_t, not a
	pthread_mutex_t.  Update users.